<resources>
    <string name="app_name">My Application</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="sum">+</string>
    <string name="decimal">.</string>
    <string name="substraction">-</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="multiplication">x</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="division">÷</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="delete">Del</string>
    <string name="c">C</string>
    <string name="operation">0.0</string>
    <string name="_0_0">0.0</string>
</resources>